# osqp_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
common/: CMakeLists.txt
common/base/: state.h  trajectory.h  type.h
common/smoothing/: CMakeLists.txt  a.out  affine_constraint.cc  affine_constraint.h  discrete_points_math.cc  discrete_points_math.h  osqp_spline1d_solver.cc  osqp_spline1d_solver.h  osqp_spline2d_solver.cc  osqp_spline2d_solver.h  polynomialxd.cc  polynomialxd.h  spline1d.cc  spline1d.h  spline1d_constraint.cc  spline1d_constraint.h  spline1d_kernel.cc  spline1d_kernel.h  spline1d_kernel_helper.cc  spline1d_kernel_helper.h  spline1d_seg.cc  spline1d_seg.h  spline1d_solver.h  spline2d.cc  spline2d.h  spline2d_constraint.cc  spline2d_constraint.h  spline2d_kernel.cc  spline2d_kernel.h  spline2d_seg.cc  spline2d_seg.h  spline2d_solver.h
common/solver/: CMakeLists.txt  qp_problem.cc  qp_problem.h
common/solver/osqp/: osqp_interface.cc  osqp_interface.h  osqp_sparse_matrix.h  sparse_vs_dense_test.cc  test
common/spline/: CMakeLists.txt  quintic_polynomial.h  quintic_polynomial_test.cc  quintic_spline2d.cc  quintic_spline2d.h  quintic_spline2d_test.cc
common/utils/: boxcar_filter.h  color_map.cc  color_map.h  common_visual.cc  common_visual.h  io_utils.cc  io_utils.h  math.cc  math.h  stdout_color.h  str_utils.h  timer.h
tcode/: osqp_spline1d_solver_test.cc  osqp_spline2d_solver_test.cc
